allowing tablefy to single column frames

--- a/src/ui.html
+++ b/src/ui.html
@@ -1,36 +1,45 @@
-
-<!-- Input with icon -->
-<div class="section-title">Row identifier</div>
-<div class="input input--with-icon">
-  <div class="icon icon--instance"></div>
-  <input id="row-identifier" type="input" class="input__field" value="">
-</div>
-
-<hr>
-
-<!-- Input with icon -->
-<div class="section-title">Column identifier</div>
-<div class="input input--with-icon">
-  <div class="icon icon--auto-layout-horizontal"></div>
-  <input id="column-identifier" type="input" class="input__field" value="">
+<div class="onboarding-tip">
+  <div class="onboarding-tip__msg">
+    Make a selection containing what you want to export and describe below
+    which layer names to use as rows and columns.
+  </div>
 </div>
 
 <hr>
 
 <div class="row">
   <div class="col">
+    <div class="section-title">Row identifier</div>
+    <div class="input input--with-icon">
+      <div class="icon icon--instance"></div>
+      <input id="row-identifier" type="input" class="input__field" value="">
+    </div>
+  </div>
+  <div class="col">
+    <div class="section-title">Column identifier</div>
+    <div class="input input--with-icon">
+      <div class="icon icon--auto-layout-horizontal"></div>
+      <input id="column-identifier" type="input" class="input__field" value="">
+    </div>
+  </div>
+</div>
+
+<hr>
+
+<div class="row">
+  <div class="col">
+    <div class="section-title">Value text layer</div>
+    <div class="input input--with-icon">
+      <div class="icon icon--group"></div>
+      <input id="column-value" type="input" class="input__field" value="">
+    </div>
+  </div>
+  <div class="col">
     <div class="section-title">Header text layer</div>
     <div class="input input--with-icon">
       <div class="icon icon--group"></div>
       <input id="column-header" type="input" class="input__field" value="">
     </div>
-  </div>
-  <div class="col">
-      <div class="section-title">Value text layer</div>
-      <div class="input input--with-icon">
-        <div class="icon icon--group"></div>
-        <input id="column-value" type="input" class="input__field" value="">
-      </div>
   </div>
 </div>
 
