custom column with node attributes and index

--- a/src/ui.html
+++ b/src/ui.html
@@ -1,3 +1,4 @@
+<main>
 <div class="onboarding-tip">
   <div class="onboarding-tip__msg">
     Make a selection containing what you want to export and describe below
@@ -45,6 +46,14 @@
 
 <hr>
 
-<footer class="container">
+<div id="custom-column-rows" class="hidden">
+  <div class="list"></div>
+<hr>
+</div>
+
+<footer class="buttons container">
   <button id="download" type="button" class='button button--primary'>Tablefy (.csv)</button>
+  <button id="addCustomColumnButton" class="button button--secondary hidden">Add custom column</button>
+  <button id="removeCustomColumnButton" class="button button--secondary-destructive hidden">Remove custom column</button>
 </footer>
+</main>
