multiple custom columns and option to add

--- a/src/ui.html
+++ b/src/ui.html
@@ -46,14 +46,16 @@
 
 <hr>
 
-<div id="custom-column-rows" class="hidden">
+<div id="custom-column-rows">
   <div class="list"></div>
-<hr>
+  <div class="buttons">
+    <button id="addCustomColumnButton" class="button button--secondary">Add custom column</button>
+    <button id="removeCustomColumnButton" class="button button--secondary-destructive hidden">Remove last one</button>
+  </div>
+  <hr>
 </div>
 
 <footer class="buttons container">
   <button id="download" type="button" class='button button--primary'>Tablefy (.csv)</button>
-  <button id="addCustomColumnButton" class="button button--secondary hidden">Add custom column</button>
-  <button id="removeCustomColumnButton" class="button button--secondary-destructive hidden">Remove custom column</button>
 </footer>
 </main>
